<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name" translatable="false">GotHiite</string>
    <string name="sync_account_type" translatable="false">fr.bischof.raphael.gothiite</string>
    <string name="content_authority" translatable="false">fr.bischof.raphael.gothiite</string>
    <string name="tabata" translatable="false">Tabata</string>
    <array translatable="false"
        name="icon_resource_name">
        <item>ico_cone</item>
        <item>ico_run</item>
        <item>ico_mountain</item>
    </array>
    <array translatable="false"
        name="pref_language_pack_values">
        <item>en</item>
        <item>fr</item>
    </array>
    <array name="pref_language_pack_options">
        <item>English</item>
        <item>French</item>
    </array>
    <string name="action_signup_signin">Sign up/Sign in</string>
    <string name="title_activity_connection">Connection</string>
    <string name="login_hint">Login</string>
    <string name="password_hint">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_not_enough_length">Login or password are too short</string>
    <string name="successfully_logged_in">Logged in !</string>
    <string name="error_connection">Unable to connect, have you got internet connection ?</string>
    <string name="error_sign_in">An account already exists with this login but the password is wrong</string>
    <string name="action_log_out">Log out</string>
    <string name="leger_test_description">Speed increase each 2 minute</string>
    <string name="leger_test_name">Leger-test</string>
    <string name="tabata_description">20s effort * 8 + 10s rest * 8</string>
    <string name="empty_run_list">Go for a run to add some content !</string>
    <string name="kmh_vvo2max">km/h vVO2max</string>
    <string name="ic_run">Session</string>
    <string name="title_activity_details">Session details</string>
    <string name="action_settings">Settings</string>
    <string name="average_speed">Average speed</string>
    <string name="vVO2maxEquivalent">vVO2max equivalent</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>
    <string name="kmh">km/h</string>
    <string name="meters_abreviation">m</string>
    <string name="kilometers_per_interval_abreviation">km/interval</string>
    <string name="meters_per_interval_abreviation">m/interval</string>
    <string name="kilometers_abreviation">km</string>
    <string name="icon_tabata">ico_run</string>
    <string name="icon_leger_test">ico_cone</string>
    <string name="action_add_run">Add a session</string>
    <string name="title_activity_session_type">New session</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_create_session">New session type</string>
    <string name="title_activity_create_session_type">New session type</string>
    <string name="name_hint">Name</string>
    <string name="description_hint">Description (Optional)</string>
    <string name="second_effort">s effort</string>
    <string name="txt_rest">s rest</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="run_type_interval_add">Add an interval</string>
    <string name="time_to_do">Time to run (Seconds)</string>
    <string name="distance_to_run">Distance to run (Meters, Optional)</string>
    <string name="is_an_effort">Is an effort</string>
    <string name="default_run_type_name">New Run Type</string>
    <string name="time_to_do_required">A time to run is required</string>
    <string name="sure_delete_interval">Are you sure you want to delete this interval ?</string>
    <string name="confirm">Confirm</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="sure_delete_run_type">Are you sure you want to delete this session type ?</string>
    <string name="edit">Edit</string>
    <string name="choose_icon">Choose an icon</string>
    <string name="title_activity_create_run">New session</string>
    <string name="error_save_user_id">Unable to save the user after connection, please relog.</string>
    <string name="action_wipe_data">Wipe data</string>
    <string name="sure_wipe_data">Are you sure you want to wipe data ?</string>
    <string name="action_sync">Synchronize</string>
    <string name="gps_signal">Gps signal</string>
    <string name="sample_description">20s effort * 8 + 10s rest * 8</string>
    <string name="sample_run_type">Tabata</string>
    <string name="sample_last_speed">vVO2max (last 14 km/h)</string>
    <string name="speed_unit">km/h</string>
    <string name="last_speed_start">vVO2max</string>
    <string name="last_speed_mid">last</string>
    <string name="last_speed_end">km/h</string>
    <string name="action_run">Run</string>
    <string name="title_activity_run">Run</string>
    <string name="pref_ie" translatable="false">pref_ie</string>
    <string name="now_running">Current running session</string>
    <string name="before_stop">before stop</string>
    <string name="before_effort">before effort</string>
    <string name="before_rest">before rest</string>
    <string name="action_stop">Stop</string>
    <string name="sure_stop_run">Are you sure you want to stop this session ?</string>
    <string name="left">left</string>
    <string name="meters_done_textview">
        <xliff:g id="meters" example="15">%1$s</xliff:g> meters
    </string>
    <string name="meters_left_textview">
        <xliff:g id="meters" example="15">%1$s</xliff:g> meters left
    </string>
    <string name="seconds_remaining_textview">
        <xliff:g id="minutes" example="15">%1$s</xliff:g>:<xliff:g id="seconds" example="15">%2$s</xliff:g> seconds remaining
    </string>
    <string name="action_temp">Say number</string>
    <string name="pref_ie_label">Endurance index</string>
    <string name="pref_ie_default">-6.5</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_language_pack_label">Language pack</string>
    <string name="pref_language_pack_key">pref_language_pack</string>
    <string name="pref_language_pack_default">en</string>
    <string name="must_be_a_number">Number waited</string>
    <string name="index_must_be_between_24_and_0">Endurance index must be between -24 and 0</string>
    <string name="vvo2max_must_be_between_2_and_35">VVo2max must be between 2km/h and 35 km/h</string>
    <string name="icon_for_the_run_type">Icon used in RunType</string>
    <string name="app_icon">Icon of the app</string>
    <string name="gothiite">Gothiite</string>
    <string name="gps_signal_low">GPS signal low</string>
    <string name="gps_signal_medium">GPS signal medium</string>
    <string name="gps_signal_high">GPS signal high</string>
    <string name="share_text" >
        I runned <xliff:g id="meters" example="250">%1$s</xliff:g> meters with a vVO2max equivalent of <xliff:g id="vvo2max" example="15">%2$s</xliff:g>km/h via Gothiite App !
    </string>
    <string name="action_share">Share</string>
    <string name="transition_icon">icon_transition</string>
</resources>
