<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_connection" android:title="@string/action_signup_signin"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_wipe_data" android:title="@string/action_wipe_data"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_sync" android:title="@string/action_sync"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
